# Pico-MiniRTOS

./: CMakeLists.txt  minirtos.c
include/: FreeRTOSConfig.h
